<resources>
    <string name="app_name">Forget Password Using Firebase</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="dont_have_an_account">Don\'t have an account!</string>
    <string name="signup">Signup</string>
    <string name="enter_name">Enter Name</string>
    <string name="already_have_an_account">Already have an account!</string>
    <string name="reset">Reset Password</string>
</resources>